# tern

./: .gitignore  .prospector.yaml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE.txt  MAINTAINERS.md  MANIFEST.in  NOTICE.txt  README.md  abstract_class_template.py  cache.yml  command_library.yml  commands.py  common.py  demo.py  dependencies.yml  dev-requirements.txt  docker.py  docker_from.py  docker_run.py  docker_run.sh  dockerfile.py  package_management.yml  pip-selfcheck.json  pyvenv.cfg  release.sh  report.py  requirements.in  requirements.txt  setup.cfg  setup.py  tern  tox.ini  travis.yml  trusted_base.yml  verify_invoke.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md  proposal.md  question.md  task.md  tinytask.md
.github/workflows/: prepare_release.yml  pull_request.yml  upload_release.yml
ci/: Dockerfile  evaluate_docs.py  prepare_release.py  release_tests.py  test_commit_message.py  test_files_touched.py
classes/: command.py  docker_image.py  image.py  image_layer.py  layer.py  notice.py  notice_origin.py  origins.py  package.py
command_lib/: base.yml  command_lib.py  general.yml  snippets.yml
config/debian/jessie/: sources.list
docker/: Dockerfile  Dockerfile.scancode  requirements.scancode.txt
docs/: adding-to-command-library.md  architecture.md  contributing-setup.md  creating-custom-templates.md  creating-tool-extensions.md  data-model.md  faq.md  glossary.md  navigating-the-code.md  project-roadmap-archive.md  project-roadmap.md  spdx-tag-value-mapping.md  spdx-tag-value-overview.md  spdx_output_golang_1.12_alpine.txt  tern-lab-tutorial.md  yaml_output.md
docs/examples/: photon-cdx.json  photon-spdx.json  photon.html  photon.json  photon.spdx  photon.txt  photon.yaml
docs/releases/: release_checklist.md  v0_1_0.md  v0_2_0.md  v0_3_0.md  v0_4_0.md  v0_5_0-requirements.txt  v0_5_0.md  v0_5_1.md  v0_5_3.md  v0_5_4.md  v1_0_0-requirements.txt  v1_0_0.md  v1_0_1-requirements.txt  v1_0_1.md  v2_0_0-requirements.txt  v2_0_0.md  v2_10_0-requirements.txt  v2_10_0.md  v2_10_1-requirements.txt  v2_10_1.md  v2_11_0-requirements.txt  v2_11_0.md  v2_12_0-requirements.txt  v2_12_0.md  v2_12_1-requirements.txt  v2_12_1.md  v2_1_0-requirements.txt  v2_1_0.md  v2_2_0-requirements.txt  v2_2_0.md  v2_3_0-requirements.txt  v2_3_0.md  v2_4_0-requirements.txt  v2_4_0.md  v2_5_0-requirements.txt  v2_5_0.md  v2_6_0-requirements.txt  v2_6_0.md  v2_6_1.md  v2_7_0-requirements.txt  (+7 more)
report/: content.py  errors.py  formats.py  info.py  report.py
samples/alpine_python/: Dockerfile
samples/debian_vim/: Dockerfile
samples/photon_3_layers/: Dockerfile
samples/photon_git/: Dockerfile
samples/photon_openjre/: Dockerfile
samples/single_stage_tern/: Dockerfile
scripts/debian/: apt_get_sources.sh
src/classes/: docker_image.py  image_layer.py
src/command_lib/: base.yml  command_lib.py  snippets.yml
src/report/: report.py
src/tools/: verify_invoke.py
src/utils/: cache.py  constants.py  general.py  rootfs.py
ss/: pyvenv.cfg
tern/: __init__.py  __main__.py  common.py  docker_helpers.py  prep.py
tern/analyze/: common.py  options.py  passthrough.py
tern/analyze/default/: bundle.py  collect.py  core.py  default_common.py  filter.py  first_layer.py  image.py
tern/analyze/docker/: analyze.py  container.py  dockerfile.py  helpers.py  run.py
tern/analyze/oci/: __init__.py  analyze.py  helpers.py  parse.py  run.py
tern/classes/: command.py  docker_image.py  file_data.py  image.py  image_layer.py  notice.py  notice_origin.py  oci_image.py  origins.py  package.py  template.py
tern/classes/templates/: spdx.py
tern/command_lib/: base.yml  command_lib.py  snippets.yml
tern/extensions/: executor.py
tern/extensions/cve-bin-tool/: executor.py
tern/extensions/cve_bin_tool/: executor.py
tern/extensions/scancode/: executor.py
tern/formats/: consumer.py  generator.py
tern/formats/cyclonedx/: cyclonedx_common.py
tern/formats/default/: generator.py
tern/formats/html/: generator.py
tern/formats/json/: consumer.py  generator.py  html.py
tern/formats/opossumui/: generator.py
tern/formats/spdx/: constants.py  file_helpers.py  formats.py  general_helpers.py  image_helpers.py  layer_helpers.py  make_spdx_model.py  package_helpers.py  spdx.py  spdx_common.py  spdx_formats_helper.py  spdx_template.py
tern/formats/spdx_legacy/: spdx_common.py
tern/formats/spdx_new/: file_helpers.py  general_helpers.py  image_helpers.py  layer_helpers.py  make_spdx_model.py  package_helpers.py  spdx_formats_helper.py
tern/formats/yaml/: generator.py
tern/helpers/: common.py  docker.py
tern/load/: docker_api.py  skopeo.py
tern/report/: analyze.py  content.py  errors.py  formats.py  report.py
tern/report/spdxtagvalue/: __init__.py  formats.py  generator.py
tern/tools/: container_debug.py  fs_hash.sh  verify_invoke.py
tern/utils/: cache.py  constants.py  container.py  dockerfile.py  externals.py  general.py  host.py  metadata.py  rootfs.py
tests/: golang_test_image.pkl  large_tern_scan_image.pkl  test_analyze_common.py  test_analyze_default_common.py  test_analyze_default_dockerfile_parse.py  test_analyze_default_filter.py  test_analyze_docker_dockerfile.py  test_class_command.py  test_class_docker_image.py  test_class_file_data.py  test_class_image.py  test_class_image_layer.py  test_class_layer.py  test_class_notice.py  test_class_notice_origin.py  test_class_oci_image.py  test_class_origins.py  test_class_package.py  test_class_template.py  test_commit_message.py  test_common.py  test_fixtures.py  test_load_docker_api.py  test_spdx_generation.py  test_util_commands.py  test_util_general.py  test_util_metadata.py
tests/dockerfiles/: buildpack_deps_jessie_arg  buildpack_deps_jessie_curl  buildpack_deps_jessie_pinned  debian_buster_apt  fail_build
tools/: fs_hash.sh
utils/: cache.py  commands.py  compliance.py  constants.py  container.py  dockerfile.py  general.py  metadata.py  rootfs.py
vagrant/: Vagrantfile  bootstrap.sh
(+67 files in other folders)
