#!/usr/bin/env python                                                           
# -*- coding: utf-8 -*-                                                         
#                                                                               
# Copyright (c) 2019-2020 VMware, Inc. All Rights Reserved.                          
# SPDX-License-Identifier: BSD-2-Clause

[metadata]
name = tern
author = VMware Inc
author-email = nishak@vmware.com
summary = An inspection tool to find the OSS compliance metadata of the packages installed in a container image.
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/tern-tools/tern/
project_urls =
    Documentation = https://github.com/tern-tools/tern/tree/master/docs
    Source Code = https://github.com/tern-tools/tern 
    Issues = https://github.com/tern-tools/tern/issues
license = BSD-2.0
keywords = 
    Distribution
    Container
    Cloud-Native
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[files]
packages = 
    tern

[options]
include_package_data = True

[entry_points]
tern.formats =
    default = tern.formats.default.generator:Default
    spdxtagvalue = tern.formats.spdx.spdxtagvalue.generator:SpdxTagValue
    spdxjson = tern.formats.spdx.spdxjson.generator:SpdxJSON
    json = tern.formats.json.generator:JSON
    yaml = tern.formats.yaml.generator:YAML
    html = tern.formats.html.generator:HTML
tern.extensions =
    cve_bin_tool = tern.extensions.cve_bin_tool.executor:CveBinTool
    scancode = tern.extensions.scancode.executor:Scancode
console_scripts = 
    tern = tern.__main__:main

[options.extras_require]
dev = bandit>=1.6; prospector>=1.3; tox>=3.14
