#!/usr/bin/env python                                                           
# -*- coding: utf-8 -*-                                                         
#                                                                               
# Copyright (c) 2019-2020 VMware, Inc. All Rights Reserved.                          
# SPDX-License-Identifier: BSD-2-Clause

[metadata]
name = tern
author = VMware Inc
author_email = nishak@vmware.com
summary = An inspection tool to find the OSS compliance metadata of the packages installed in a container image.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/tern-tools/tern/
project_urls =
    Documentation = https://github.com/tern-tools/tern/tree/master/docs
    Source Code = https://github.com/tern-tools/tern 
    Issues = https://github.com/tern-tools/tern/issues
license = BSD-2.0
keywords = 
    Distribution
    Container
    Cloud-Native
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[files]
packages = 
    tern

[options]
include_package_data = True

[entry_points]
tern.formats =
    default = tern.formats.default.generator:Default
    spdxtagvalue = tern.formats.spdx.spdxtagvalue.generator:SpdxTagValue
    spdxjson = tern.formats.spdx.spdxjson.generator:SpdxJSON
    spdxjsonc = tern.formats.spdx.spdxjson.consumer:SpdxJSON
    json = tern.formats.json.generator:JSON
    jsonc = tern.formats.json.consumer:JSON
    yaml = tern.formats.yaml.generator:YAML
    html = tern.formats.html.generator:HTML
    cyclonedxjson = tern.formats.cyclonedx.cyclonedxjson.generator:CycloneDXJSON
    spdxjson22 = tern.formats.spdx_new.spdxjson22.generator:SpdxJSON22
    spdxyaml22 = tern.formats.spdx_new.spdxyaml22.generator:SpdxYAML22
    spdxxml22 = tern.formats.spdx_new.spdxxml22.generator:SpdxXML22
    spdxrdf22 = tern.formats.spdx_new.spdxrdf22.generator:SpdxRDF22
    spdxtagvalue22 = tern.formats.spdx_new.spdxtagvalue22.generator:SpdxTagValue22
    spdxjson23 = tern.formats.spdx_new.spdxjson23.generator:SpdxJSON23
    spdxyaml23 = tern.formats.spdx_new.spdxyaml23.generator:SpdxYAML23
    spdxxml23 = tern.formats.spdx_new.spdxxml23.generator:SpdxXML23
    spdxrdf23 = tern.formats.spdx_new.spdxrdf23.generator:SpdxRDF23
    spdxtagvalue23 = tern.formats.spdx_new.spdxtagvalue23.generator:SpdxTagValue23
tern.extensions =
    cve_bin_tool = tern.extensions.cve_bin_tool.executor:CveBinTool
    scancode = tern.extensions.scancode.executor:Scancode
console_scripts = 
    tern = tern.__main__:main

[options.extras_require]
dev = bandit>=1.6; prospector>=1.5.1; tox>=3.14
