#!/usr/bin/env python                                                           
# -*- coding: utf-8 -*-                                                         
#                                                                               
# Copyright (c) 2019-2020 VMware, Inc. All Rights Reserved.                          
# SPDX-License-Identifier: BSD-2-Clause

[metadata]
name = tern
author = VMware Inc
author_email = nishak@vmware.com
summary = An inspection tool to find the OSS compliance metadata of the packages installed in a container image.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/tern-tools/tern/
project_urls =
    Documentation = https://github.com/tern-tools/tern/tree/master/docs
    Source Code = https://github.com/tern-tools/tern 
    Issues = https://github.com/tern-tools/tern/issues
license = BSD-2.0
keywords = 
    Distribution
    Container
    Cloud-Native
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[files]
packages = 
    tern

[options]
include_package_data = True

[entry_points]
tern.formats =
    default = tern.formats.default.generator:Default
    json = tern.formats.json.generator:JSON
    jsonc = tern.formats.json.consumer:JSON
    yaml = tern.formats.yaml.generator:YAML
    html = tern.formats.html.generator:HTML
    cyclonedxjson = tern.formats.cyclonedx.cyclonedxjson.generator:CycloneDXJSON
    spdxjson = tern.formats.spdx.spdxjson.generator:SpdxJSON
    spdxyaml = tern.formats.spdx.spdxyaml.generator:SpdxYAML
    spdxxml = tern.formats.spdx.spdxxml.generator:SpdxXML
    spdxrdf = tern.formats.spdx.spdxrdf.generator:SpdxRDF
    spdxtagvalue = tern.formats.spdx.spdxtagvalue.generator:SpdxTagValue
    spdxtagvalue_legacy = tern.formats.spdx_legacy.spdxtagvalue.generator:SpdxTagValue
    spdxjson_legacy = tern.formats.spdx_legacy.spdxjson.generator:SpdxJSON
    spdxjsonc = tern.formats.spdx_legacy.spdxjson.consumer:SpdxJSON
tern.extensions =
    cve_bin_tool = tern.extensions.cve_bin_tool.executor:CveBinTool
    scancode = tern.extensions.scancode.executor:Scancode
console_scripts = 
    tern = tern.__main__:main

[options.extras_require]
dev = bandit>=1.6; prospector>=1.5.1; tox>=3.14
